--- a/src/options_inline.html
+++ b/src/options_inline.html
@@ -3,10 +3,16 @@
 
 <head>
     <title>CloseTab Options</title>
+    <style type="text/css">
+    .option-desc {
+        color: hsl(0, 0%, 60%);
+        margin-top: 13px;
+    }
+    </style>
 </head>
 
 <body style="display:none;text-align:center;">
-    <span style="margin-right:10px;">Shortcut key</span>
+    <span style="margin-right:10px;">Menu item shortcut key</span>
     <select id="shortcut-key">
         <option value="C">C</option>
         <option value="W">W</option>
@@ -16,6 +22,8 @@
         <option value="D">D</option>
         <option value="Z">Z</option>
     </select>
+    <div class="option-desc">This key can be pressed to activate the "Close tab" menu item
+        <br>instead of clicking on it</div>
     <script src="common.js"></script>
     <script src="options.js"></script>
 </body>
