--- a/src/options_tab.html
+++ b/src/options_tab.html
@@ -13,6 +13,11 @@
         font-size: 18px;
         height: 33px;
     }
+    
+    .option-desc {
+        color: #aaa;
+        margin-top: 35px;
+    }
     </style>
 </head>
 
@@ -22,7 +27,7 @@
         <span style="vertical-align:middle;font-size:28px;margin-left:10px;">CloseTab Options</span>
     </div>
     <div style="text-align:center;margin-top:80px;">
-        <span>Shortcut key</span>
+        <span>Menu item shortcut key</span>
         <select id="shortcut-key">
             <option value="C">C</option>
             <option value="W">W</option>
@@ -32,6 +37,8 @@
             <option value="D">D</option>
             <option value="Z">Z</option>
         </select>
+        <div class="option-desc">This key can be pressed to activate the "Close tab" menu item
+            <br>instead of clicking on it</div>
     </div>
     <script src="common.js"></script>
     <script src="options.js"></script>
