--- a/src/options_inline.html
+++ b/src/options_inline.html
@@ -1,37 +1,44 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <meta charset="utf-8" />
     <title>CloseTab Options</title>
     <style type="text/css">
-    .option-desc {
+      .option-desc {
         color: hsl(0, 0%, 60%);
         margin-top: 13px;
-    }
+      }
     </style>
-</head>
+  </head>
 
-<body style="text-align:center;">
-    <div id="shortcut-key-supported" style="display:none;">
-        <span style="margin-right:10px;">Menu item shortcut key</span>
-        <select id="shortcut-key">
-            <option value="C">C</option>
-            <option value="W">W</option>
-            <option value="Q">Q</option>
-            <option value="X">X</option>
-            <option value="E">E</option>
-            <option value="D">D</option>
-            <option value="Z">Z</option>
-        </select>
-        <div class="option-desc">This key can be pressed to activate the "Close tab" menu item
-            <br>instead of clicking on it</div>
+  <body style="text-align: center">
+    <div
+      id="shortcut-key-supported"
+      style="display: none"
+    >
+      <span style="margin-right: 10px">Menu item shortcut key</span>
+      <select id="shortcut-key">
+        <option value="C">C</option>
+        <option value="W">W</option>
+        <option value="Q">Q</option>
+        <option value="X">X</option>
+        <option value="E">E</option>
+        <option value="D">D</option>
+        <option value="Z">Z</option>
+      </select>
+      <div class="option-desc">
+        This key can be pressed to activate the "Close tab" menu item
+        <br />instead of clicking on it
+      </div>
     </div>
-    <div id="shortcut-key-not-supported" class="option-desc" style="display:none;">
-        No options for OS X systems
+    <div
+      id="shortcut-key-not-supported"
+      class="option-desc"
+      style="display: none"
+    >
+      No options for OS X systems
     </div>
     <script src="common.js"></script>
     <script src="options.js"></script>
-</body>
-
+  </body>
 </html>
