--- a/src/options_inline.html
+++ b/src/options_inline.html
@@ -27,8 +27,8 @@
         <option value="Z">Z</option>
       </select>
       <div class="option-desc">
-        This key can be pressed to activate the "Close tab" menu item
-        <br />instead of clicking on it
+        Press this key to activate the "Close tab" menu item <br />instead of
+        clicking it
       </div>
     </div>
     <div
@@ -36,7 +36,7 @@
       class="option-desc"
       style="display: none"
     >
-      No options for OS X systems
+      No options for macOS
     </div>
     <script src="common.js"></script>
     <script src="options.js"></script>
