--- a/src/options_inline.html
+++ b/src/options_inline.html
@@ -11,7 +11,16 @@
     </style>
   </head>
 
-  <body style="text-align: center">
+  <body
+    style="
+      height: 90px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+    "
+  >
     <div
       id="shortcut-key-supported"
       style="display: none"
@@ -38,7 +47,9 @@
     >
       No options for macOS
     </div>
-    <script src="common.js"></script>
-    <script src="options.js"></script>
+    <script
+      src="options.js"
+      type="module"
+    ></script>
   </body>
 </html>
