--- a/src/options_inline.html
+++ b/src/options_inline.html
@@ -6,7 +6,6 @@
     <style type="text/css">
       .option-desc {
         color: hsl(0, 0%, 60%);
-        margin-top: 13px;
       }
     </style>
   </head>
@@ -35,7 +34,10 @@
         <option value="D">D</option>
         <option value="Z">Z</option>
       </select>
-      <div class="option-desc">
+      <div
+        class="option-desc"
+        style="margin-top: 13px"
+      >
         Press this key to activate the "Close tab" menu item <br />instead of
         clicking it
       </div>
