generate select option elements; update script tags for manifest v2

--- a/src_manifest_v2/options_inline.html
+++ b/src_manifest_v2/options_inline.html
@@ -25,15 +25,7 @@
       style="display: none"
     >
       <span style="margin-right: 10px">Menu item shortcut key</span>
-      <select id="shortcut-key">
-        <option value="C">C</option>
-        <option value="W">W</option>
-        <option value="Q">Q</option>
-        <option value="X">X</option>
-        <option value="E">E</option>
-        <option value="D">D</option>
-        <option value="Z">Z</option>
-      </select>
+      <select id="shortcut-key"></select>
       <div
         class="option-desc"
         style="margin-top: 13px"
@@ -49,9 +41,8 @@
     >
       No options for macOS
     </div>
-    <script
-      src="options.js"
-      type="module"
-    ></script>
+    <script src="config.js"></script>
+    <script src="storage.js"></script>
+    <script src="options.js"></script>
   </body>
 </html>
