--- a/src/options_tab.html
+++ b/src/options_tab.html
@@ -39,15 +39,7 @@
       style="display: none; margin-top: 50px"
     >
       <span>Menu item shortcut key:</span>
-      <select id="shortcut-key">
-        <option value="C">C</option>
-        <option value="W">W</option>
-        <option value="Q">Q</option>
-        <option value="X">X</option>
-        <option value="E">E</option>
-        <option value="D">D</option>
-        <option value="Z">Z</option>
-      </select>
+      <select id="shortcut-key"></select>
       <div class="option-desc">
         Press this key to activate the "Close tab" menu item <br />instead of
         clicking it
