--- a/src/options_tab.html
+++ b/src/options_tab.html
@@ -18,21 +18,32 @@
       }
 
       .option-desc {
-        color: #aaa;
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
         margin-top: 25px;
+        font-size: 14px;
+        color: #aaa;
+      }
+
+      a {
+        color: inherit;
+      }
+
+      a:hover {
+        color: #000;
       }
     </style>
   </head>
-
   <body style="font-size: 18px; margin-top: 30px; text-align: center">
     <div>
       <img
-        src="img/logo48.png"
+        src="img/logo38.png"
         style="vertical-align: middle"
       />
-      <span style="vertical-align: middle; font-size: 28px; margin-left: 10px"
-        >Close Tab Options</span
-      >
+      <span style="vertical-align: middle; font-size: 28px; margin-left: 10px">
+        Close Tab Options
+      </span>
     </div>
     <div
       id="shortcut-key-supported"
@@ -50,7 +61,15 @@
       class="option-desc"
       style="display: none"
     >
-      No options for macOS
+      <div>No options for macOS</div>
+      <div>
+        <a
+          href="https://github.com/hansifer/close-tab#macos-limitations"
+          target="_blank"
+        >
+          Learn more
+        </a>
+      </div>
     </div>
     <script
       src="options.js"
