add "Buy Me A Coffee" button

--- a/src/options_tab.html
+++ b/src/options_tab.html
@@ -33,6 +33,15 @@
       a:hover {
         color: #000;
       }
+
+      .buy-me-a-coffee {
+        margin-top: 40px;
+        filter: grayscale(1);
+      }
+
+      .buy-me-a-coffee:hover {
+        filter: none;
+      }
     </style>
   </head>
   <body style="font-size: 18px; margin-top: 30px; text-align: center">
@@ -70,6 +79,18 @@
           Learn more
         </a>
       </div>
+    </div>
+    <div class="buy-me-a-coffee">
+      <a
+        href="https://www.buymeacoffee.com/hansifer"
+        target="_blank"
+      >
+        <img
+          src="https://cdn.buymeacoffee.com/buttons/v2/default-yellow.png"
+          alt="Buy Me A Coffee"
+          style="height: 30px !important; width: 130px !important"
+        />
+      </a>
     </div>
     <script
       src="options.js"
